--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -65,3 +65,16 @@ body {
 	color: #FF6A6A;
 	font-weight: 400;
 }
+
+.advanced-search {
+	position: absolute;
+	top: 140px;
+	left: 100px;
+	color: black;
+	height: 
+	width: 100px;
+}
+.advanced-search form label {
+	display: block;
+	margin: 5px 0;
+}
